[gd_scene load_steps=2 format=3 uid="uid://cohe1joff6ew2"]

[ext_resource type="Script" uid="uid://bhxsihsa4t63b" path="res://scripts/hall_of_fame.gd" id="1_nmhn0"]

[node name="HallOfFame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nmhn0")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1144.0
offset_bottom = 644.0

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="Title" type="Label" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Sal√≥n de la Fama"

[node name="ScoresTree" type="Tree" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="RefreshButton" type="Button" parent="Margin/VBox/Buttons"]
layout_mode = 2
text = "Refrescar"

[node name="BackButton" type="Button" parent="Margin/VBox/Buttons"]
layout_mode = 2
text = "Volver"
